--- a/social_red/public/menu.html
+++ b/social_red/public/menu.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Menu - Bar Website Template</title>
+	<title>Hola Peru</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
